unpackaged/main/default/objects/DSCORGPKG__MaintainOperation__c/DSCORGPKG__MaintainOperation__c.object-meta.xml
<CustomObject>
    <label>DiscoverOrg Maintain Operation</label>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>MaintainOperation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MaintainOperations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>