unpackaged/main/default/objects/DSCORGPKG__MaintainOperation__c/fields/DSCORGPKG__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>