unpackaged/main/default/objects/DSCORGPKG__MaintainOperation__c/fields/DSCORGPKG__Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Operation_Type__c</fullName>
    <label>Operation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>