unpackaged/main/default/objects/DSCORGPKG__MaintainOperation__c/fields/DSCORGPKG__parameterBody__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__parameterBody__c</fullName>
    <label>parameterBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>