unpackaged/main/default/objects/DSCORGPKG__MaintainOperation__c/fields/DSCORGPKG__Time__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Time__c</fullName>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>